--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
   <br>
       <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-7 mt-4 p-4 ml-20 mr-20" >
         <div class="card bg-brown-500 ">
-          <a href="/workshop_046/src/index1.html">
+          <a href="src/index1.html">
           <img
             class=" rounded-lg w-70 h-30 object-cover"
-            src="เพรา-removebg-preview.png"alt=""/>
+            src="src/เพรา-removebg-preview.png"alt=""/>
             <h3 class="mt-4 bg-orange-200 px-4 py-2 rounded-lg hover:bg-orange-500 transition text-align: center heading font-bold">Portfolio</h3>
           <h2 class="">
           </h2>          
