--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
 
       <div class="card ">
-          <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwirhtDW3ceLAxU_-jgGHdaKBW4QFnoECAgQAQ&url=https%3A%2F%2Fchatgpt.com%2F&usg=AOvVaw29vbCnS_7PDD4xupasoOfg&opi=89978449">
+          <a href="src/login.html">
           <img
           class=" w-70 h-30 object-cover"
             src="https://japan.cnet.com/storage/2019/03/12/de74b74496a7c3be3caf3449899af431/lp-logo-3_1000x657.jpg"
             alt="" />
             
-          <h3 class="mt-4 bg-orange-200 px-4 py-2 rounded-lg hover:bg-orange-500 transition text-align: center heading font-bold ">ChatGPT</h3>
+          <h3 class="mt-4 bg-orange-200 px-4 py-2 rounded-lg hover:bg-orange-500 transition text-align: center heading font-bold ">Sign In</h3>
           <h2></h2>       
         </a>   
         </div>
